# k8-api

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  minikube-mycube.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  publish_crates.yml
scripts/: publish-crates.sh  publish-list
src/k8-client/: Cargo.toml  Makefile  README.md
src/k8-client/k8-fixtures/: Cargo.toml
src/k8-client/k8-fixtures/data/: topic.json
src/k8-client/k8-fixtures/src/: test_fixtures.rs
src/k8-client/k8-test/: Dockerfile  build.sh  hello-deploy.yaml  role-binding.yaml  role.yaml  service.yaml
src/k8-client/src/: auth.rs  cert.rs  client.rs  config_map.rs  error.rs  fixture.rs  lib.rs  list_stream.rs  pod.rs  secret.rs  service.rs  stateful.rs  stream.rs  uri.rs  wstream.rs
src/k8-client/src/client/: client.rs  client_impl.rs  config_native.rs  config_openssl.rs  config_rustls.rs  list_stream.rs  log_stream.rs  memory.rs  mod.rs  wstream.rs
src/k8-client/src/hyper/: client.rs  config.rs  mod.rs  wstream.rs
src/k8-client/src/hyper_native/: client.rs
src/k8-client/src/isahc_rustls/: client.rs  config.rs  mod.rs  stream.rs  wstream.rs
src/k8-client/src/native/: client.rs  config.rs  mod.rs  stream.rs  wstream.rs
src/k8-client/tests/: canary.rs  error.rs  job.rs  pod_affinity.rs  replace.rs  service.rs  stateful.rs
src/k8-config/: Cargo.toml  README.md
src/k8-config/data/: k8config.yaml
src/k8-config/examples/: kubeconfig_read.rs
src/k8-config/src/: config.rs  context.rs  error.rs  lib.rs  pod.rs
src/k8-ctx-util/: Cargo.toml
src/k8-ctx-util/src/: main.rs
src/k8-diff/: Cargo.toml  README.md
src/k8-diff/k8-dderive/: Cargo.toml
src/k8-diff/src/: lib.rs
src/k8-diff/src/json/: diff.rs  se.rs
src/k8-metadata-client/: Cargo.toml  README.md
src/k8-metadata-client/src/: client.rs  diff.rs  in_memory.rs  lib.rs  nothing.rs
src/k8-metadata-core/: Cargo.toml
src/k8-metadata-core/src/: metadata.rs
src/k8-obj-app/: Cargo.toml  README.md
src/k8-obj-app/src/: lib.rs  stateful.rs
src/k8-obj-core/: Cargo.toml
src/k8-obj-core/src/: config_map.rs  lib.rs  namespace.rs  plugin.rs  pod.rs  secret.rs  service.rs
src/k8-obj-metadata/: Cargo.toml
src/k8-obj-metadata/src/: crd.rs  lib.rs  metadata.rs  options.rs  store.rs
src/k8-obj-storage/: Cargo.toml  README.md
src/k8-obj-storage/src/: lib.rs  storage_class.rs
src/k8-types/: Cargo.toml  README.md
src/k8-types/src/: crd.rs  int_or_string.rs  lib.rs  metadata.rs  options.rs  store.rs
src/k8-types/src/app/: deployment.rs  mod.rs  stateful.rs
src/k8-types/src/batch/: job.rs  mod.rs
src/k8-types/src/core/: affinity.rs  config_map.rs  mod.rs  namespace.rs  node.rs  plugin.rs  pod.rs  secret.rs  service.rs  service_account.rs
src/k8-types/src/storage/: lib.rs  storage_class.rs
