[workspace]
members = [
    "src/k8-types",
    "src/k8-metadata-client",
    "src/k8-diff",
    "src/k8-config",
    "src/k8-client",
    "src/k8-ctx-util"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
fluvio-future = "0.7.0"
serde_yaml = { version = "0.9.0", default-features = false }
