[package]
name = "k8-config"
version = "1.5.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
edition = "2018"
description = "Read Kubernetes config"
repository = "https://github.com/infinyon/k8-api"
license = "Apache-2.0"

[features]
context = ["tera"]

[dependencies]
tracing = "0.1.19"
dirs = "4.0.0"
serde = { version ="1.0.103", features = ['derive'] }
serde_yaml = "0.8.9"
serde_json = "1.0.73"
tera = { version = "1.3.0", optional = true }
hostfile = "0.2.0"
thiserror = "1.0.20"
