[package]
name = "k8-config"
version = "2.0.2"
authors = ["Fluvio Contributors <team@fluvio.io>"]
edition = "2018"
description = "Read Kubernetes config"
repository = "https://github.com/infinyon/k8-api"
license = "Apache-2.0"

[features]
context = ["tera"]

[dependencies]
tracing = "0.1.19"
dirs = "4.0.0"
serde = { version ="1.0.151", features = ['derive'] }
serde_yaml = "0.9.0"
serde_json = "1.0.57"
tera = { version = "1.3.0", optional = true }
hostfile = "0.2.0"
thiserror = "1.0.20"

[dev-dependencies]
fluvio-future = { version = "0.4.2", features = ["subscriber"]}


[[example]]
name = "kubeconfig_read"