[package]
name = "k8-config"
version = "3.0.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
edition = "2021"
description = "Read Kubernetes config"
repository = "https://github.com/infinyon/k8-api"
license = "Apache-2.0"

[features]
context = ["tera"]

[dependencies]
tracing = "0.1.19"
dirs = "5.0.1"
serde = { version ="1.0.136", features = ['derive'] }
serde_yaml = { workspace = true }
serde_json = "1.0.57"
tera = { version = "1.19.1", optional = true }
hostfile = "0.3.0"
thiserror = "1.0.20"

[dev-dependencies]
fluvio-future = { workspace = true, features = ["subscriber"]}


[[example]]
name = "kubeconfig_read"
