[package]
name = "k8-diff"
edition = "2018"
version = "0.1.2"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "Used for computing diff between Kubernetes objects"
repository = "https://github.com/infinyon/k8-api"
license = "Apache-2.0"

[dependencies]
serde = "1.0.136"
serde_json = "1.0.92"

[dev-dependencies]
serde = { version ="1.0.136", features = ['derive'] }