[package]
edition = "2018"
name = "k8-metadata-client"
version = "1.0.1"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "Trait for interfacing kubernetes metadata service"
repository = "https://github.com/infinyon/k8-api"
license = "Apache-2.0"

[dependencies]
tracing = "0.1.19"
futures = { version = "0.3.4"}
pin-utils = "0.1.0-alpha.4"
serde = { version ="1.0.103", features = ['derive'] }
serde_json = "1.0.40"
serde_qs = "0.5.0"
async-trait = "0.1.21"
http = { version = "0.1.15" }
flv-future-aio = { version = "2.0.0" }
k8-diff = { version = "0.1.0", path = "../k8-diff"}
k8-obj-metadata = { version = "1.0.0", path = "../k8-obj-metadata" }

