[package]
edition = "2018"
name = "k8-metadata-client"
version = "3.4.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "Trait for interfacing kubernetes metadata service"
repository = "https://github.com/infinyon/k8-api"
license = "Apache-2.0"

[dependencies]
tracing = "0.1.19"
futures-util = { version = "0.3.21"}
pin-utils = "0.1.0-alpha.4"
serde = { version ="1.0.136", features = ['derive'] }
serde_json = "1.0.80"
async-trait = "0.1.52"
k8-diff = { version = "0.1.0", path = "../k8-diff"}
k8-types = { version = "0.5.0", path = "../k8-types" }
