[package]
edition = "2018"
name = "k8-obj-app"
version = "1.1.1"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "Kubernetes app objects"
repository = "https://github.com/infinyon/k8-api"
license = "Apache-2.0"


[dependencies]
#log = "0.4.8"
tracing = "0.1.19"
serde = { version ="1.0.103", features = ['derive'] }
serde_json = "1.0.27"
serde_qs = "0.4.1"
http = { version = "0.1.15" }
k8-obj-metadata = { version = "1.0.0", path = "../k8-obj-metadata" }
k8-obj-core = { version = "1.1.0", path = "../k8-obj-core" }