[package]
edition = "2018"
name = "k8-obj-core"
version = "1.1.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "Core Kubernetes API Objects"
repository = "https://github.com/infinyon/k8-api"
license = "Apache-2.0"



[dependencies]
serde = { version ="1.0.103", features = ['derive'] }
k8-obj-metadata = { version = "1.0.0", path = "../k8-obj-metadata" }