[package]
edition = "2018"
name = "k8-obj-core"
version = "2.1.1"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "Core Kubernetes API Objects"
repository = "https://github.com/infinyon/k8-api"
license = "Apache-2.0"



[dependencies]
tracing = "0.1.19"
serde = { version ="1.0.103", features = ['derive'] }
serde_json = "1.0.27"
serde_qs = "0.4.1"
http = { version = "0.1.15" }
k8-obj-metadata = { version = "2.0.0", path = "../k8-obj-metadata" }