[package]
edition = "2018"
name = "k8-obj-metadata"
version = "1.0.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "Core Kubernetes metadata traits"
repository = "https://github.com/infinyon/k8-api"
license = "Apache-2.0"
categories = ["encoding"]


[dependencies]
serde = { version ="1.0.103", features = ['derive'] }
serde_qs = "0.4.1"

