[package]
edition = "2018"
name = "k8-obj-metadata"
version = "2.0.2"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "Core Kubernetes metadata traits"
repository = "https://github.com/infinyon/k8-api"
license = "Apache-2.0"
categories = ["encoding"]


[dependencies]
tracing = "0.1.19"
serde = { version ="1.0.118", features = ['derive'] }
serde_json = "1.0.60"
serde_qs = "0.8.1"

