[package]
edition = "2018"
name = "k8-types"
version = "0.5.3"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "Kubernetes Object Types"
repository = "https://github.com/infinyon/k8-api"
license = "Apache-2.0"
categories = ["encoding"]

[features]
core = []
app = ["core"]
storage = []
batch = ["core"]

[dependencies]
serde = { version ="1.0.136", features = ['derive'] }
serde_json = "1.0.60"
serde_qs = "0.9.2"

